@@ -15,8 +15,20 @@ The processing code resides in the database. The code can be 'syntax highlighted
 
 == Features ==
 * Handles 'action=formsubmit' action
+* Follows 'redirects'
 * Executes PHP code stored in a standard Mediawiki page
 * Supports code extraction when enclosed in 'PHP' tags
+* Supports the definition of a class in the processor page ( $page.'Class' )
+** If a method 'submit' is present in the said class, it will be called upon formsubmit action (see example)
+
+== Example ==
+=== Form Processing Page 'MyFormProc' ===
+<php>
+  class MyFormProcClass
+  {
+  	 function submit() {}
+  }
+</php>
 
 == Dependancy ==
 * ExtensionClass extension
@@ -25,12 +37,13 @@ The processing code resides in the database. The code can be 'syntax highlighted
 To install independantly from BizzWiki:
 * Download 'ExtensionClass' extension
 * Apply the following changes to 'LocalSettings.php'
-<geshi lang=php>
+<source lang=php>
 require('extensions/ExtensionClass.php');
 require('extensions/FormProc/FormProc.php');
-</geshi>
+</source>
 
 == History ==
+- added functionality to define a class for handling form processing
 
 == Code ==
 </wikitext>*/
@@ -40,6 +53,7 @@ if ( !class_exists('ExtensionClass') )
 	echo 'ExtensionClass missing: FormProc extension will not work!';	
 else
 {
+	$wgAutoloadClasses['FormProcBaseClass'] = dirname(__FILE__) . "/FormProcBaseClass.php" ;
 	require( "FormProcClass.php" );
 	FormProcClass::singleton();
 }
